gap fix

--- a/week-2/styles.css
+++ b/week-2/styles.css
@@ -29,6 +29,7 @@ nav {
 .splash {
     background: url("assets/images/hero.jpg");
     height: 450px;
+    margin-bottom: 0;
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
@@ -49,7 +50,7 @@ nav {
 }
 
 .full {
-    margin: 20px 0;
+    margin: 0;
     padding: 25px 20px;
     max-width: none;;
     background:  #cc99ff;
